# handheld-emu

./: .gitignore  CMakeLists.txt  README.md  cpu.cpp  emu.cpp
include/: bus.hpp  cart.hpp  common.hpp  cpu.hpp  emu.hpp  io_registers.hpp  logger.hpp  memory.hpp  ppu.hpp  system.hpp  timer.hpp
src/: CMakeLists.txt  cart.cpp  cpu.cpp  cpu_instructions.cpp  emu.cpp  main.cpp  memory.cpp  ppu.cpp  system.cpp
src/include/: cart.hpp  common.hpp  cpu.hpp
tests/: cart_tests.cpp  cpu_tests.cpp
